<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
     android:layout_width="match_parent"
    android:id="@+id/main_layout"
    android:orientation="horizontal"
    tools:context="by.goncharov.homestart.activities.LoginActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="280dp"
            android:layout_marginRight="90dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="230dp"
            android:layout_marginRight="90dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="fieldEmail, fieldPassword" />

        <ImageView
            android:id="@+id/intro_icon"
            android:layout_width="79dp"
            android:layout_height="72dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="70dp"
            app:srcCompat="?attr/intro_icon"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:elevation="0dp" />


        <Button
            android:id="@+id/emailSignInButton"
            style="@style/FirebaseUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="355dp"
            android:layout_marginRight="170dp"
            android:background="?attr/button_reg"
            android:contentDescription="@string/sign_in"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            style="@style/FirebaseUI.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="420dp"
            android:layout_marginRight="150dp"
            android:background="?attr/button_reg"
            android:contentDescription="@string/sign_in"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.Material3.FloatingActionButton.Primary" />

        <TextView
            android:id="@+id/intro_description"
            android:layout_width="251dp"
            android:layout_height="72dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/app_description"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"

            app:constraint_referenced_ids="emailCreateAccountButton, emailSignInButton" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="485dp"
            android:layout_marginRight="150dp"
            android:visibility="visible"
            app:buttonSize="icon_only"
            app:cornerRadius="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/signedInButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
